added downloadImageBtn styles #6

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,4 +50,14 @@
         <item name="layout_constraintTop_toTopOf">parent</item>
         <item name="srcCompat">?attr/listChoiceBackgroundIndicator</item>
     </style>
+
+    <style name="downloadImageBtn">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/fab_margin</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="fabSize">normal</item>
+        <item name="layout_anchorGravity">bottom|end</item>
+    </style>
 </resources>
