--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,4 +60,10 @@
         <item name="fabSize">normal</item>
         <item name="layout_anchorGravity">bottom|end</item>
     </style>
+
+    <style name="toLargeIconBtn">
+        <item name="android:layout_width">12dp</item>
+        <item name="android:layout_height">10dp</item>
+        <item name="android:layout_marginStart">335dp</item>
+    </style>
 </resources>
